lab6/y.output
Terminals unused in grammar

    '|'
    '&'
    '%'
    UMINUS


Grammar

    0 $accept: Program $end

    1 Program: Declarationlist

    2 Declarationlist: Declaration
    3                | Declaration Declarationlist

    4 Declaration: VarDeclaration
    5            | FunDeclaration

    6 VarDeclaration: TypeSpecifier VarList ';'

    7 VarList: T_ID
    8        | T_ID '[' T_NUM ']'
    9        | T_ID ',' VarList
   10        | T_ID '[' T_NUM ']' ',' VarList

   11 TypeSpecifier: T_INT
   12              | T_VOID
   13              | T_BOOLEAN

   14 FunDeclaration: TypeSpecifier T_ID '(' Params ')' CompoundStmt

   15 Params: T_VOID
   16       | ParamList

   17 ParamList: Param
   18          | Param ',' ParamList

   19 Param: TypeSpecifier T_ID
   20      | TypeSpecifier T_ID '[' ']'

   21 CompoundStmt: T_BEGIN LocalDeclarations StatementList T_END

   22 LocalDeclarations: ε
   23                  | VarDeclaration LocalDeclarations

   24 StatementList: ε
   25              | Statement StatementList

   26 Statement: ExpressionStmt
   27          | CompoundStmt
   28          | SelectionStmt
   29          | IterationStmt
   30          | AssignmentStmt
   31          | ReturnStmt
   32          | ReadStmt
   33          | WriteStmt

   34 ExpressionStmt: Expression ';'
   35               | ';'

   36 SelectionStmt: T_IF Expression T_THEN Statement T_ENDIF
   37              | T_IF Expression T_THEN Statement T_ELSE Statement T_ENDIF

   38 IterationStmt: T_WHILE Expression T_DO Statement

   39 ReturnStmt: T_RETURN ';'
   40           | T_RETURN Expression ';'

   41 ReadStmt: T_READ Var ';'

   42 WriteStmt: T_WRITE Expression ';'
   43          | T_WRITE T_STRING ';'

   44 AssignmentStmt: Var '=' SimpleExpression ';'

   45 Expression: SimpleExpression

   46 Var: T_ID
   47    | T_ID '[' Expression ']'

   48 SimpleExpression: AdditiveExpression
   49                 | SimpleExpression Relop AdditiveExpression

   50 Relop: T_LE
   51      | '<'
   52      | '>'
   53      | T_GE
   54      | T_EQ
   55      | T_NE

   56 AdditiveExpression: Term
   57                   | AdditiveExpression Addop Term

   58 Addop: '+'
   59      | '-'

   60 Term: Factor
   61     | Term Multop Factor

   62 Multop: '*'
   63       | '/'
   64       | T_AND
   65       | T_OR

   66 Factor: '(' Expression ')'
   67       | T_NUM
   68       | Var
   69       | Call
   70       | T_TRUE
   71       | T_FALSE
   72       | T_NOT Factor

   73 Call: T_ID '(' Args ')'

   74 Args: ε
   75     | ArgList

   76 ArgList: Expression
   77        | Expression ',' ArgList


Terminals, with rules where they appear

    $end (0) 0
    '%' (37)
    '&' (38)
    '(' (40) 14 66 73
    ')' (41) 14 66 73
    '*' (42) 62
    '+' (43) 58
    ',' (44) 9 10 18 77
    '-' (45) 59
    '/' (47) 63
    ';' (59) 6 34 35 39 40 41 42 43 44
    '<' (60) 51
    '=' (61) 44
    '>' (62) 52
    '[' (91) 8 10 20 47
    ']' (93) 8 10 20 47
    '|' (124)
    error (256)
    T_NUM <num> (258) 8 10 67
    T_ID <string> (259) 7 8 9 10 14 19 20 46 47 73
    T_STRING <string> (260) 43
    T_INT (261) 11
    T_VOID (262) 12 15
    T_BOOLEAN (263) 13
    T_BEGIN (264) 21
    T_END (265) 21
    T_RETURN (266) 39 40
    T_READ (267) 41
    T_WRITE (268) 42 43
    T_LE (269) 50
    T_GE (270) 53
    T_EQ (271) 54
    T_NE (272) 55
    T_AND (273) 64
    T_OR (274) 65
    T_NOT (275) 72
    T_IF (276) 36 37
    T_THEN (277) 36 37
    T_ELSE (278) 37
    T_ENDIF (279) 36 37
    T_WHILE (280) 38
    T_DO (281) 38
    T_TRUE (282) 70
    T_FALSE (283) 71
    UMINUS (284)


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    Program (47)
        on left: 1
        on right: 0
    Declarationlist <node> (48)
        on left: 2 3
        on right: 1 3
    Declaration <node> (49)
        on left: 4 5
        on right: 2 3
    VarDeclaration <node> (50)
        on left: 6
        on right: 4 23
    VarList <node> (51)
        on left: 7 8 9 10
        on right: 6 9 10
    TypeSpecifier <datatype> (52)
        on left: 11 12 13
        on right: 6 14 19 20
    FunDeclaration <node> (53)
        on left: 14
        on right: 5
    Params <node> (54)
        on left: 15 16
        on right: 14
    ParamList <node> (55)
        on left: 17 18
        on right: 16 18
    Param <node> (56)
        on left: 19 20
        on right: 17 18
    CompoundStmt <node> (57)
        on left: 21
        on right: 14 27
    LocalDeclarations <node> (58)
        on left: 22 23
        on right: 21 23
    StatementList <node> (59)
        on left: 24 25
        on right: 21 25
    Statement <node> (60)
        on left: 26 27 28 29 30 31 32 33
        on right: 25 36 37 38
    ExpressionStmt <node> (61)
        on left: 34 35
        on right: 26
    SelectionStmt <node> (62)
        on left: 36 37
        on right: 28
    IterationStmt <node> (63)
        on left: 38
        on right: 29
    ReturnStmt <node> (64)
        on left: 39 40
        on right: 31
    ReadStmt <node> (65)
        on left: 41
        on right: 32
    WriteStmt <node> (66)
        on left: 42 43
        on right: 33
    AssignmentStmt <node> (67)
        on left: 44
        on right: 30
    Expression <node> (68)
        on left: 45
        on right: 34 36 37 38 40 42 47 66 76 77
    Var <node> (69)
        on left: 46 47
        on right: 41 44 68
    SimpleExpression <node> (70)
        on left: 48 49
        on right: 44 45 49
    Relop <operator> (71)
        on left: 50 51 52 53 54 55
        on right: 49
    AdditiveExpression <node> (72)
        on left: 56 57
        on right: 48 49 57
    Addop <operator> (73)
        on left: 58 59
        on right: 57
    Term <node> (74)
        on left: 60 61
        on right: 56 57 61
    Multop <operator> (75)
        on left: 62 63 64 65
        on right: 61
    Factor <node> (76)
        on left: 66 67 68 69 70 71 72
        on right: 60 61 72
    Call <node> (77)
        on left: 73
        on right: 69
    Args <node> (78)
        on left: 74 75
        on right: 73
    ArgList <node> (79)
        on left: 76 77
        on right: 75 77


State 0

    0 $accept: • Program $end

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    Program          go to state 4
    Declarationlist  go to state 5
    Declaration      go to state 6
    VarDeclaration   go to state 7
    TypeSpecifier    go to state 8
    FunDeclaration   go to state 9


State 1

   11 TypeSpecifier: T_INT •

    $default  reduce using rule 11 (TypeSpecifier)


State 2

   12 TypeSpecifier: T_VOID •

    $default  reduce using rule 12 (TypeSpecifier)


State 3

   13 TypeSpecifier: T_BOOLEAN •

    $default  reduce using rule 13 (TypeSpecifier)


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 10


State 5

    1 Program: Declarationlist •

    $default  reduce using rule 1 (Program)


State 6

    2 Declarationlist: Declaration •
    3                | Declaration • Declarationlist

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 2 (Declarationlist)

    Declarationlist  go to state 11
    Declaration      go to state 6
    VarDeclaration   go to state 7
    TypeSpecifier    go to state 8
    FunDeclaration   go to state 9


State 7

    4 Declaration: VarDeclaration •

    $default  reduce using rule 4 (Declaration)


State 8

    6 VarDeclaration: TypeSpecifier • VarList ';'
   14 FunDeclaration: TypeSpecifier • T_ID '(' Params ')' CompoundStmt

    T_ID  shift, and go to state 12

    VarList  go to state 13


State 9

    5 Declaration: FunDeclaration •

    $default  reduce using rule 5 (Declaration)


State 10

    0 $accept: Program $end •

    $default  accept


State 11

    3 Declarationlist: Declaration Declarationlist •

    $default  reduce using rule 3 (Declarationlist)


State 12

    7 VarList: T_ID •
    8        | T_ID • '[' T_NUM ']'
    9        | T_ID • ',' VarList
   10        | T_ID • '[' T_NUM ']' ',' VarList
   14 FunDeclaration: TypeSpecifier T_ID • '(' Params ')' CompoundStmt

    '['  shift, and go to state 14
    ','  shift, and go to state 15
    '('  shift, and go to state 16

    $default  reduce using rule 7 (VarList)


State 13

    6 VarDeclaration: TypeSpecifier VarList • ';'

    ';'  shift, and go to state 17


State 14

    8 VarList: T_ID '[' • T_NUM ']'
   10        | T_ID '[' • T_NUM ']' ',' VarList

    T_NUM  shift, and go to state 18


State 15

    9 VarList: T_ID ',' • VarList

    T_ID  shift, and go to state 19

    VarList  go to state 20


State 16

   14 FunDeclaration: TypeSpecifier T_ID '(' • Params ')' CompoundStmt

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 21
    T_BOOLEAN  shift, and go to state 3

    TypeSpecifier  go to state 22
    Params         go to state 23
    ParamList      go to state 24
    Param          go to state 25


State 17

    6 VarDeclaration: TypeSpecifier VarList ';' •

    $default  reduce using rule 6 (VarDeclaration)


State 18

    8 VarList: T_ID '[' T_NUM • ']'
   10        | T_ID '[' T_NUM • ']' ',' VarList

    ']'  shift, and go to state 26


State 19

    7 VarList: T_ID •
    8        | T_ID • '[' T_NUM ']'
    9        | T_ID • ',' VarList
   10        | T_ID • '[' T_NUM ']' ',' VarList

    '['  shift, and go to state 14
    ','  shift, and go to state 15

    $default  reduce using rule 7 (VarList)


State 20

    9 VarList: T_ID ',' VarList •

    $default  reduce using rule 9 (VarList)


State 21

   12 TypeSpecifier: T_VOID •
   15 Params: T_VOID •

    ')'       reduce using rule 15 (Params)
    $default  reduce using rule 12 (TypeSpecifier)


State 22

   19 Param: TypeSpecifier • T_ID
   20      | TypeSpecifier • T_ID '[' ']'

    T_ID  shift, and go to state 27


State 23

   14 FunDeclaration: TypeSpecifier T_ID '(' Params • ')' CompoundStmt

    ')'  shift, and go to state 28


State 24

   16 Params: ParamList •

    $default  reduce using rule 16 (Params)


State 25

   17 ParamList: Param •
   18          | Param • ',' ParamList

    ','  shift, and go to state 29

    $default  reduce using rule 17 (ParamList)


State 26

    8 VarList: T_ID '[' T_NUM ']' •
   10        | T_ID '[' T_NUM ']' • ',' VarList

    ','  shift, and go to state 30

    $default  reduce using rule 8 (VarList)


State 27

   19 Param: TypeSpecifier T_ID •
   20      | TypeSpecifier T_ID • '[' ']'

    '['  shift, and go to state 31

    $default  reduce using rule 19 (Param)


State 28

   14 FunDeclaration: TypeSpecifier T_ID '(' Params ')' • CompoundStmt

    T_BEGIN  shift, and go to state 32

    CompoundStmt  go to state 33


State 29

   18 ParamList: Param ',' • ParamList

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    TypeSpecifier  go to state 22
    ParamList      go to state 34
    Param          go to state 25


State 30

   10 VarList: T_ID '[' T_NUM ']' ',' • VarList

    T_ID  shift, and go to state 19

    VarList  go to state 35


State 31

   20 Param: TypeSpecifier T_ID '[' • ']'

    ']'  shift, and go to state 36


State 32

   21 CompoundStmt: T_BEGIN • LocalDeclarations StatementList T_END

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 22 (LocalDeclarations)

    VarDeclaration     go to state 37
    TypeSpecifier      go to state 38
    LocalDeclarations  go to state 39


State 33

   14 FunDeclaration: TypeSpecifier T_ID '(' Params ')' CompoundStmt •

    $default  reduce using rule 14 (FunDeclaration)


State 34

   18 ParamList: Param ',' ParamList •

    $default  reduce using rule 18 (ParamList)


State 35

   10 VarList: T_ID '[' T_NUM ']' ',' VarList •

    $default  reduce using rule 10 (VarList)


State 36

   20 Param: TypeSpecifier T_ID '[' ']' •

    $default  reduce using rule 20 (Param)


State 37

   23 LocalDeclarations: VarDeclaration • LocalDeclarations

    T_INT      shift, and go to state 1
    T_VOID     shift, and go to state 2
    T_BOOLEAN  shift, and go to state 3

    $default  reduce using rule 22 (LocalDeclarations)

    VarDeclaration     go to state 37
    TypeSpecifier      go to state 38
    LocalDeclarations  go to state 40


State 38

    6 VarDeclaration: TypeSpecifier • VarList ';'

    T_ID  shift, and go to state 19

    VarList  go to state 13


State 39

   21 CompoundStmt: T_BEGIN LocalDeclarations • StatementList T_END

    T_NUM     shift, and go to state 41
    T_ID      shift, and go to state 42
    T_BEGIN   shift, and go to state 32
    T_RETURN  shift, and go to state 43
    T_READ    shift, and go to state 44
    T_WRITE   shift, and go to state 45
    T_NOT     shift, and go to state 46
    T_IF      shift, and go to state 47
    T_WHILE   shift, and go to state 48
    T_TRUE    shift, and go to state 49
    T_FALSE   shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    $default  reduce using rule 24 (StatementList)

    CompoundStmt        go to state 53
    StatementList       go to state 54
    Statement           go to state 55
    ExpressionStmt      go to state 56
    SelectionStmt       go to state 57
    IterationStmt       go to state 58
    ReturnStmt          go to state 59
    ReadStmt            go to state 60
    WriteStmt           go to state 61
    AssignmentStmt      go to state 62
    Expression          go to state 63
    Var                 go to state 64
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 40

   23 LocalDeclarations: VarDeclaration LocalDeclarations •

    $default  reduce using rule 23 (LocalDeclarations)


State 41

   67 Factor: T_NUM •

    $default  reduce using rule 67 (Factor)


State 42

   46 Var: T_ID •
   47    | T_ID • '[' Expression ']'
   73 Call: T_ID • '(' Args ')'

    '['  shift, and go to state 70
    '('  shift, and go to state 71

    $default  reduce using rule 46 (Var)


State 43

   39 ReturnStmt: T_RETURN • ';'
   40           | T_RETURN • Expression ';'

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    ';'      shift, and go to state 72
    '('      shift, and go to state 52

    Expression          go to state 73
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 44

   41 ReadStmt: T_READ • Var ';'

    T_ID  shift, and go to state 75

    Var  go to state 76


State 45

   42 WriteStmt: T_WRITE • Expression ';'
   43          | T_WRITE • T_STRING ';'

    T_NUM     shift, and go to state 41
    T_ID      shift, and go to state 42
    T_STRING  shift, and go to state 77
    T_NOT     shift, and go to state 46
    T_TRUE    shift, and go to state 49
    T_FALSE   shift, and go to state 50
    '('       shift, and go to state 52

    Expression          go to state 78
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 46

   72 Factor: T_NOT • Factor

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    '('      shift, and go to state 52

    Var     go to state 74
    Factor  go to state 79
    Call    go to state 69


State 47

   36 SelectionStmt: T_IF • Expression T_THEN Statement T_ENDIF
   37              | T_IF • Expression T_THEN Statement T_ELSE Statement T_ENDIF

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    '('      shift, and go to state 52

    Expression          go to state 80
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 48

   38 IterationStmt: T_WHILE • Expression T_DO Statement

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    '('      shift, and go to state 52

    Expression          go to state 81
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 49

   70 Factor: T_TRUE •

    $default  reduce using rule 70 (Factor)


State 50

   71 Factor: T_FALSE •

    $default  reduce using rule 71 (Factor)


State 51

   35 ExpressionStmt: ';' •

    $default  reduce using rule 35 (ExpressionStmt)


State 52

   66 Factor: '(' • Expression ')'

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    '('      shift, and go to state 52

    Expression          go to state 82
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 53

   27 Statement: CompoundStmt •

    $default  reduce using rule 27 (Statement)


State 54

   21 CompoundStmt: T_BEGIN LocalDeclarations StatementList • T_END

    T_END  shift, and go to state 83


State 55

   25 StatementList: Statement • StatementList

    T_NUM     shift, and go to state 41
    T_ID      shift, and go to state 42
    T_BEGIN   shift, and go to state 32
    T_RETURN  shift, and go to state 43
    T_READ    shift, and go to state 44
    T_WRITE   shift, and go to state 45
    T_NOT     shift, and go to state 46
    T_IF      shift, and go to state 47
    T_WHILE   shift, and go to state 48
    T_TRUE    shift, and go to state 49
    T_FALSE   shift, and go to state 50
    ';'       shift, and go to state 51
    '('       shift, and go to state 52

    $default  reduce using rule 24 (StatementList)

    CompoundStmt        go to state 53
    StatementList       go to state 84
    Statement           go to state 55
    ExpressionStmt      go to state 56
    SelectionStmt       go to state 57
    IterationStmt       go to state 58
    ReturnStmt          go to state 59
    ReadStmt            go to state 60
    WriteStmt           go to state 61
    AssignmentStmt      go to state 62
    Expression          go to state 63
    Var                 go to state 64
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 56

   26 Statement: ExpressionStmt •

    $default  reduce using rule 26 (Statement)


State 57

   28 Statement: SelectionStmt •

    $default  reduce using rule 28 (Statement)


State 58

   29 Statement: IterationStmt •

    $default  reduce using rule 29 (Statement)


State 59

   31 Statement: ReturnStmt •

    $default  reduce using rule 31 (Statement)


State 60

   32 Statement: ReadStmt •

    $default  reduce using rule 32 (Statement)


State 61

   33 Statement: WriteStmt •

    $default  reduce using rule 33 (Statement)


State 62

   30 Statement: AssignmentStmt •

    $default  reduce using rule 30 (Statement)


State 63

   34 ExpressionStmt: Expression • ';'

    ';'  shift, and go to state 85


State 64

   44 AssignmentStmt: Var • '=' SimpleExpression ';'
   68 Factor: Var •

    '='  shift, and go to state 86

    $default  reduce using rule 68 (Factor)


State 65

   45 Expression: SimpleExpression •
   49 SimpleExpression: SimpleExpression • Relop AdditiveExpression

    T_LE  shift, and go to state 87
    T_GE  shift, and go to state 88
    T_EQ  shift, and go to state 89
    T_NE  shift, and go to state 90
    '<'   shift, and go to state 91
    '>'   shift, and go to state 92

    $default  reduce using rule 45 (Expression)

    Relop  go to state 93


State 66

   48 SimpleExpression: AdditiveExpression •
   57 AdditiveExpression: AdditiveExpression • Addop Term

    '+'  shift, and go to state 94
    '-'  shift, and go to state 95

    $default  reduce using rule 48 (SimpleExpression)

    Addop  go to state 96


State 67

   56 AdditiveExpression: Term •
   61 Term: Term • Multop Factor

    T_AND  shift, and go to state 97
    T_OR   shift, and go to state 98
    '*'    shift, and go to state 99
    '/'    shift, and go to state 100

    $default  reduce using rule 56 (AdditiveExpression)

    Multop  go to state 101


State 68

   60 Term: Factor •

    $default  reduce using rule 60 (Term)


State 69

   69 Factor: Call •

    $default  reduce using rule 69 (Factor)


State 70

   47 Var: T_ID '[' • Expression ']'

    T_NUM    shift, and go to state 41
    T_ID     shift, and go to state 42
    T_NOT    shift, and go to state 46
    T_TRUE   shift, and go to state 49
    T_FALSE  shift, and go to state 50
    '('      shift, and go to state 52

    Expression          go to state 102
    Var                 go to state 74
    SimpleExpression    go to state 65
    AdditiveExpression  go to state 66
    Term                go to state 67
    Factor              go to state 68
    Call                go to state 69


State 71

   73 Call: T_ID '(' • Args ')'
